fixed background image position on mobile

--- a/style-home.css
+++ b/style-home.css
@@ -83,7 +83,7 @@ nav {
     background: #000;
     background-position: 50%;
     background-size: cover;
-    width: 100%;
+    width: 100vh;
     height: 100vh;
     overflow: hidden;
 }
